Change from session to JWT
