# server/docs/swagger.json
@@ -1,1 +1,134 @@
-{"swagger":"2.0","info":{"title":"music room Api","version":"1.0.0","description":"a music streaming webapp"},"paths":{"/api/auth/login/{strategy}":{"POST":{"tags":["Authentication"],"summary":"Authenticates user via a passport strategy","consumes":["application/json"],"produces":["application/json"],"parameters":[{"name":"strategy","in":"path","required":true,"type":"string","description":"passport strategy to authenticate via (local, google, facebook)"}],"responses":{"200":{"description":"successful operation","schema":{"type":"Boolean","items":{"$ref":"#/definitions/Login"}}}}}},"/api/auth":{"GET":{"tags":["Authentication"],"summary":"Checks if current user is authenticated","consumes":["application/json"],"produces":["application/json"],"parameters":[],"responses":{"200":{"description":"successful operation","schema":{"type":"Boolean","items":{"$ref":"#/definitions/isAuthenticated"}}}}}},"/api/auth/logout":{"GET":{"tags":["Authentication"],"summary":"Logs user out","consumes":["application/json"],"produces":["application/json"],"parameters":[],"responses":{"200":{"description":"successful operation","schema":{"type":"Boolean","items":{"$ref":"#/definitions/logout"}}}}}},"/api/users":{"GET":{"tags":["UserController"],"summary":"Gets list of users","consumes":["application/json"],"produces":["application/json"],"parameters":[],"responses":{"200":{"description":"successful operation","schema":{"type":null,"items":{"$ref":"#/definitions/getUser"}}}}}}},"definitions":{"Login":{"properties":{"strategy":{"type":"string","description":"passport strategy to authenticate via (local, google, facebook)"},"success":{"type":"boolean","description":"true if user successfully authenticated."},"status":{"type":"string","description":"describes authentication status."},"user":{"type":"object","description":"user data from DB.","$ref":"#/definitions/user"}},"required":["strategy","success","status","user"]},"isAuthenticated":{"properties":{"auth":{"type":"boolean","description":"authenticated status."},"user":{"type":"object","description":"user object from bd.","$ref":"#/definitions/user"}},"required":["auth","user"]},"logout":{"properties":{"disconnected":{"type":"boolean","description":"true if user session terminated."}},"required":["disconnected"]}}}
+{
+  "swagger": "2.0",
+  "info": {
+    "title": "music room Api",
+    "version": "1.0.0",
+    "description": "a music streaming webapp"
+  },
+  "paths": {
+    "/api/auth/login/{strategy}": {
+      "POST": {
+        "tags": ["Authentication"],
+        "summary": "Authenticates user via a passport strategy",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "strategy",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "passport strategy to authenticate via (local, google, facebook)"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "type": "Boolean",
+              "items": { "$ref": "#/definitions/Login" }
+            }
+          }
+        }
+      }
+    },
+    "/api/auth": {
+      "GET": {
+        "tags": ["Authentication"],
+        "summary": "Checks if current user is authenticated",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "type": "Boolean",
+              "items": { "$ref": "#/definitions/isAuthenticated" }
+            }
+          }
+        }
+      }
+    },
+    "/api/auth/logout": {
+      "GET": {
+        "tags": ["Authentication"],
+        "summary": "Logs user out",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "type": "Boolean",
+              "items": { "$ref": "#/definitions/logout" }
+            }
+          }
+        }
+      }
+    },
+    "/api/users": {
+      "GET": {
+        "tags": ["UserController"],
+        "summary": "Gets list of users",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "type": null,
+              "items": { "$ref": "#/definitions/getUser" }
+            }
+          }
+        }
+      }
+    }
+  },
+  "definitions": {
+    "Login": {
+      "properties": {
+        "strategy": {
+          "type": "string",
+          "description": "passport strategy to authenticate via (local, google, facebook)"
+        },
+        "success": {
+          "type": "boolean",
+          "description": "true if user successfully authenticated."
+        },
+        "status": {
+          "type": "string",
+          "description": "describes authentication status."
+        },
+        "user": {
+          "type": "object",
+          "description": "user data from DB.",
+          "$ref": "#/definitions/user"
+        }
+      },
+      "required": ["strategy", "success", "status", "user"]
+    },
+    "isAuthenticated": {
+      "properties": {
+        "auth": { "type": "boolean", "description": "authenticated status." },
+        "user": {
+          "type": "object",
+          "description": "user object from bd.",
+          "$ref": "#/definitions/user"
+        }
+      },
+      "required": ["auth", "user"]
+    },
+    "logout": {
+      "properties": {
+        "disconnected": {
+          "type": "boolean",
+          "description": "true if user session terminated."
+        }
+      },
+      "required": ["disconnected"]
+    }
+  }
+}
